--- a/ecommerce-ui/src/App.css
+++ b/ecommerce-ui/src/App.css
@@ -5,8 +5,13 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;;
-  width: 800px;
   margin: 10px;
+}
+
+.flex-container-vertical {
+  display: flex;
+  margin: 10px;
+  flex-direction: column;
 }
 
 .home-card {
@@ -18,6 +23,7 @@
 .home-card-image {
   object-fit: cover;
   width: 100%;
+  height: 60%;
 }
 
 .home-card-body {
@@ -55,4 +61,54 @@
 .rating-stars {
   color: teal;
   padding: 0 5px 0 0;
+}
+
+.home-card-button {
+  height: 30px;
+  width: 60px;
+  outline: none;
+  color: white;
+  background-color: rgb(255, 90, 95);
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 3px gray;
+  cursor: pointer;
+}
+
+.home-card-button:active {
+  background-color: rgb(223, 60, 71);
+  box-shadow: 1px 1px darkgray;
+  transform: translateY(2px);
+}
+
+.cart-item {
+  border-bottom: 1px solid rgb(240, 240, 240);
+  padding: 5px;
+}
+
+.cart-item:hover {
+  background-color: aliceblue;
+}
+
+.cart-item-type {
+  color: gray;
+  font-size: 0.8em;
+}
+
+.cart-item-cost {
+  float: right;
+}
+
+.cart-item-button {
+  outline: none;
+  color: white;
+  background-color: rgb(255, 90, 95);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.cart-item-button:active {
+  background-color: rgb(223, 60, 71);
 }
