add total to shopping cart

--- a/ecommerce-ui/src/App.css
+++ b/ecommerce-ui/src/App.css
@@ -116,3 +116,10 @@
 .hidden {
   display: none;
 }
+
+.shopping-cart-total {
+  padding: 10px;
+  text-align: right;
+  font-size: 1.2em;
+  font-weight: bold;
+}
