--- a/ecommerce-ui/src/App.css
+++ b/ecommerce-ui/src/App.css
@@ -81,6 +81,13 @@
   transform: translateY(2px);
 }
 
+.home-card-button:disabled {
+  background-color: gray;
+  box-shadow: 1px 1px darkgray;
+  transform: translateY(2px);
+  cursor: auto;
+}
+
 .cart-item {
   border-bottom: 1px solid rgb(240, 240, 240);
   padding: 5px;
